<resources>
    <string name="app_name">Shop Example</string>
    <string name="button_settings">Start demo</string>
    <string name="button_checkout">Continue to payment details</string>
    <string name="button_pay">Pay</string>
    <string name="button_neworder">Start new order</string>
    <string name="button_edit">Edit</string>

    <string name="settings_header">Shop Example - Settings</string>
...

    <string name="confirm_success">Your order is\nconfirmed!</string>

    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_button">Close</string>
    <string name="dialog_error_message">An error occurred while processing your payment</string>
    <string name="dialog_error_listurl_invalid">Please paste a valid List Url in the input field.</string>

    <string name="contentdescription_iconcheck">Icon check</string>
    <string name="contentdescription_confetti">Confetti</string>
    <string name="contentdescription_background">Header background</string>
    <string name="contentdescription_date">Date</string>
    <string name="contentdescription_count">Count</string>
...
